--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "mongodb": "^6.6.2",
+    "bcrypt": "^5.1.1",
+    "mongodb": "^6.7.0",
     "next": "^14.2.3",
+    "next-auth": "^4.24.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "postcss": "^8",
